style.css
body {
    margin-top: 80px;
}
.row {
    --bs-gutter-x: 0; /*Permet d'eviter une scroll-bar horizontale*/
}
.btn {
    background-color: rgb(255, 193, 7);
    color: white;
    font-weight: bold;
    padding: 10px 30px;
}
.btn:hover {
    background-color: rgb(185, 139, 0);
    border: 1px solid rgb(185, 139, 0);
    color: white;
}
.titre_section {
    text-align: center;
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: 1px;
    margin-bottom: 30px;
}
.sous_titre {
    text-align: center;
    color: rgb(148, 148, 148);
    font-size: 24px;
    font-style: italic;
    margin-bottom: 100px;
}
/* --------------Navbar-------------- */
.navbar {
    text-transform: uppercase;
    font-size: 15px;
    height: 80px;
    letter-spacing: 2px;
    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

/* Icon toggle */
.navbar-toggler {
    border: 1px solid white !important;
    color: white !important;
}
.navbar-toggler-icon {
    color: white !important;
}

/* fin Icon toggle */
.navbar .nav-link {
    color: rgb(255, 255, 255) !important;
    background: rgb(33, 37, 41);
    border-right: 1px solid rgb(255, 193, 7);
    padding-top: 5px;
    padding: 10px 20px 10px 5px !important;
    margin-right: 5px;
    margin-bottom: 2px;
}
.navbar .nav-link:hover {
    color: rgb(255, 193, 7) !important;
    padding-top: 5px !important;
    text-decoration: underline;
}

/* --------------Header-------------- */
.header_img {
    background: url("assets/img/header-bureau.jpg") no-repeat;
    background-position: center center;
    background-size: cover;
    height: 94vh;
}
.header_item {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: white;
}
.header_item p {
    font-size: 50px;
}
.header_item h1 {
    font-size: 80px;
}
p.header_message {
    color: rgb(226, 226, 226);
    background-color: rgba(0, 0, 0, 0.692);
    border: 1px solid rgb(255, 193, 7);
    text-align: center;
    font-size: 23px;
    border-radius: 5px;
    padding: 20px;
    margin-top: 35px;
    max-width: 70%;
    height: auto;
    transition: transform 1s;
}
p.header_message:hover {
    transform: scale(1.09);
}
@media (max-width: 1200px) {    
    p.header_message {
        font-size: 20px;
        max-width: 100%;
    }
}
@media (max-width: 768px) {
    .header_item h1 {
        font-size: 60px;
    }
    p.header_message {
        font-size: 18px;
        max-width: 100%;
    }
}
@media (max-width: 576px) {
    .header_item h1 {
        font-size: 40px;
    }
    p.header_message {
        font-size: 15px;
        max-width: 100%;
    }
}

/* --------------Compétence-------------- */
.competence {
    padding-top: 10vh;
    padding-bottom: 10vh;
}
@media screen and (max-width: 1050px) {
    section.competence div {
        display: flex;
        justify-content: center;
    }
    #myChart {
        width: 600px !important;
        height: auto !important;
    }
}
@media screen and (max-width: 750px) {
    #myChart {
        width: 500px !important;
        height: auto !important;
    }
}
@media screen and (max-width: 620px) {
    #myChart {
        width: 400px !important;
        height: auto !important;
    }
}

/* --------------Réalisation-------------- */
.realisation {
    background-color: rgb(245, 245, 245);
    padding-top: 10vh;
    padding-bottom: 10vh;
}

/* ___Modal___ */
/*Voir vers la fin du fichier*/

/* --------------Experience-------------- */
.experience {
    padding-top: 10vh;
    padding-bottom: 10vh;
}
@media screen and (max-width: 767px) {
    section.experience h4 {
        font-size: 20px !important;
    }
    section.experience h4.experience_rechercheDemploi {
        font-size: 13px !important;
    }
}

/* Pour le fil d'ariane voir plus bas */
/* --------------A propos-------------- */
.aPropos {
    background-color: rgb(245, 245, 245);
    padding-top: 10vh;
    padding-bottom: 10vh;
}
.aPropos h1.titre_section {
    margin-bottom: 85px;
}
.card {
    border-radius: 10px;
    box-shadow: 5px 5px 5px rgb(126, 113, 113);
}
.card_img > img {
    border: 1px solid black;
    border-radius: 100%;
}
.card_list > li {
    list-style: none;
    margin-left: 30px;
}
@media screen and (max-width: 991px) {
    .card_img > img{
        width: 350px;
    }
}
@media screen and (max-width: 400px) {
    .card_img > img{
        width: 300px;
    }
}
/*___Voir aussi___*/

.plusDinfo img {
    width: 150px;
    height: auto;
}
img.curriculumVitae {
    border: 1px solid black;
    border-radius: 5px;
    transition: transform 1s;
}
img.curriculumVitae:hover {
    box-shadow: 3px 3px 10px rgb(177, 170, 170);
    transform: scale(1.20);
}
#modalCV > .modal-dialog {
    min-width: 96%;
}
/*.QRcode, .curriculumVitae {
    margin-bottom: 10px;
}*/
.btn_reseaux, .curriculumVitae {
    margin-bottom: 10px;
}
a.btn_reseaux {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-decoration: none;
    color: black;
    border: 1px solid black;
    border-radius: 5px;
    padding: 0px 15px;
    width: 150px;
    height: 210px;
    transition: transform 1s;
}
a.btn_reseaux:hover {
    background-color: rgb(255, 193, 7);
    box-shadow: 3px 3px 10px rgb(177, 170, 170);
    transform: scale(1.20);
}

/* --------------Contact-------------- */
.contact {
    background: url("assets/img/contact/map-image.png") no-repeat;
    background-color: #212529;
    background-repeat: no-repeat;
    background-position: center;
    height: auto;
    padding-top: 10vh;
    padding-bottom: 10vh;
}
.block_contact {
    padding-top: 80px;
}
.info_contact {
    display: flex;
    justify-content: center;
    align-items: center;
    color: rgba(209, 209, 209, 0.657);
    background-color: rgba(0, 0, 0, 0.308);
    border-radius: 10px;
    min-height: 200px;
}
/* ... */

